src/test/deca/context/invalid/created/int-plus-bool.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 10: plus int boolean is not definied.
// 
// Historique:
//    cree le 01/01/2022
{
    a + true ;
}